move to list of lists to avoid unchecked array