@@ -18,7 +18,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 public class DriverScreen extends AppCompatActivity {
-    private List<Line>[] schedule = null;
+    private List<List<Line>> schedule;
 
     private RecyclerView drivesView;
     private ArrayAdapter<String> spinnerAdapter;
@@ -61,7 +61,7 @@ public class DriverScreen extends AppCompatActivity {
                     @Override
                     public void onItemSelected(AdapterView<?> parent, View view, int position, long id) {
                         toBeDisplayed.clear();
-                        toBeDisplayed.addAll(position == 0 ? Arrays.stream(schedule).flatMap(List::stream).collect(Collectors.toList()) : schedule[position - 1]);
+                        toBeDisplayed.addAll(position == 0 ? schedule.stream().flatMap(List::stream).collect(Collectors.toList()) : schedule.get(position - 1));
                         drivesAdapter.notifyDataSetChanged();
                     }
 
@@ -74,8 +74,16 @@ public class DriverScreen extends AppCompatActivity {
         }).start();
     }
 
-    private List<Line>[] get_schedule_from_server() {
-        return new List[]{List.of(new Line("1", "101", "Jerusalem to Tel Aviv", "08:00", "08:30"), new Line("1", "103", "modi'in to Kfar Saba", "08:00", "08:30")), List.of(new Line("2", "202", "Tel Aviv Center to Jerusalem", "09:00", "08:30"), new Line("2", "202", "Jerusalem to Petah Tikva", "09:00", "08:30"), new Line("2", "202", "sderot to Tal Shahar", "09:00", "08:30")), List.of(new Line("3", "303", "Dimona to Beer Sheva", "10:00", "08:30"), new Line("2", "202", "Tal Shahar to modi'in", "09:00", "08:30")), List.of(new Line("4", "404", "Petah Tikva to Kfar Saba", "11:00", "08:30"), new Line("2", "202", "Petah Tikva to Beer Sheva", "09:00", "08:30")), List.of(new Line("5", "505", "modi'in to Dimona", "12:00", "08:30")), List.of(new Line("6", "606", "Jerusalem to Beer Sheva", "13:00", "08:30"), new Line("4", "404", "Hoshaia to Tal Shahar", "11:00", "08:30"), new Line("4", "404", "Tal Shahar to Sderot", "11:00", "08:30")), List.of(new Line("7", "707", "Kfar Saba to Petah Tikva", "14:00", "08:30"))};
+    private List<List<Line>> get_schedule_from_server() {
+        return Arrays.asList(
+            List.of(new Line("1", "101", "Jerusalem to Tel Aviv", "08:00", "08:30"), new Line("1", "103", "modi'in to Kfar Saba", "08:00", "08:30")),
+            List.of(new Line("2", "202", "Tel Aviv Center to Jerusalem", "09:00", "08:30"), new Line("2", "202", "Jerusalem to Petah Tikva", "09:00", "08:30"), new Line("2", "202", "sderot to Tal Shahar", "09:00", "08:30")),
+            List.of(new Line("3", "303", "Dimona to Beer Sheva", "10:00", "08:30"), new Line("2", "202", "Tal Shahar to modi'in", "09:00", "08:30")),
+            List.of(new Line("4", "404", "Petah Tikva to Kfar Saba", "11:00", "08:30"), new Line("2", "202", "Petah Tikva to Beer Sheva", "09:00", "08:30")),
+            List.of(new Line("5", "505", "modi'in to Dimona", "12:00", "08:30")),
+            List.of(new Line("6", "606", "Jerusalem to Beer Sheva", "13:00", "08:30"), new Line("4", "404", "Hoshaia to Tal Shahar", "11:00", "08:30"), new Line("4", "404", "Tal Shahar to Sderot", "11:00", "08:30")),
+            List.of(new Line("7", "707", "Kfar Saba to Petah Tikva", "14:00", "08:30"))
+        );
     }
 
     public static class Line {
